--- a/homepage2.css
+++ b/homepage2.css
@@ -598,7 +598,9 @@ header.site-header {
 .site-footer {
     background:#0F2405;
     padding-top: 20px;
+    position: absolute;
     bottom: 0px;
+    width: 100%;
 }
 
 
