--- a/homepage2.css
+++ b/homepage2.css
@@ -282,6 +282,7 @@ header.site-header {
     width: 320px;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: 0;
 }
 
 .portfolio .category .container p {
