--- a/homepage2.css
+++ b/homepage2.css
@@ -75,7 +75,7 @@ a {
 }
 
 /* HEADER STYLES */
-header.site-header {
+.header {
     display: flex; 
     justify-content: space-between;
     align-items: center;
