--- a/homepage2.css
+++ b/homepage2.css
@@ -62,6 +62,7 @@ a {
 .hero-section h1 {
     font-size: 56px;
     font-weight: bold; 
+    font-family: NeueHaasGroteskDisp Pro Md, Helvetica, sans-serif;
     text-transform: uppercase;
     padding-top:144px;
     display: flex;
@@ -72,6 +73,7 @@ a {
 .hero-section h3 {
     font-size: 32px;
     font-weight:bold;
+    font-family: NeueHaasGroteskDisp Pro Md, Helvetica, sans-serif;
     text-transform:uppercase;
     color:#0F2405;
     display:flex;
