--- a/homepage2.css
+++ b/homepage2.css
@@ -99,6 +99,7 @@ a {
 .navbar a {
     float: left;
     display: block;
+    font-family: NeueHaasGroteskText Pro Md, Helvetica, sans-serif;
     color: #F1E8DE;
     text-align: right;
     padding: 14px 16px;
@@ -181,6 +182,7 @@ a {
 .about .main-content {
     margin-left: 120px;
     margin-right: 120px;
+    margin-top: 120px;
 }
 
 .about .main-content h2 {
@@ -220,7 +222,7 @@ a {
     margin-bottom: 20px;
 }
 
-.about a {
+.about .main-content a {
     display: flex;
     justify-content: center;
     align-items: center;
