--- a/homepage2.css
+++ b/homepage2.css
@@ -113,7 +113,9 @@ a {
 .site-footer {
     flex: 1 1 auto;
     bottom: 0px;
-    position: relative;
+    position: fixed;
+    float: float-bottom;
+   
 }
 
 
